Add Professional Development section to resume
Added a section on professional development detailing workshop participation.

--- a/eric-grasby-data-engineering-resume.tex
+++ b/eric-grasby-data-engineering-resume.tex
@@ -372,6 +372,17 @@
          \newline
          \url{https://github.com/echarlesgrasby/dissertation}
         \end{onecolentry}
+
+        \section{Professional Development}
+        \begin{twocolentry}{
+            July 2025 - November 2025
+        }
+            \textbf{Workshop Program Committee Member} --- Invited by Dr. Wei Dai (Purdue) \\ Applied Artificial Intelligence for Public Safety and Security Workshop on Big Data, 2025 \textit{(AI-PublicSecurity-2025)}
+            
+            \vspace{0.25 cm}
+            
+            I served as a member on the paper review committee for this workshop. AI-PublicSecurity-2025 was held in conjunction with the 2025 IEEE International Conference on Big Data, Macau
+        \end{twocolentry}
     \end{samepage}
 
     \vspace{0.2 cm}
